10_pod_secret_configmap.yml
kind: Pod
apiVersion: v1
metadata:
  name: nginx
  namespace: demo
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80

# kubectl delete pod nginx
# curl http://demo.DNS
# kubectl exec nginx env | grep key
