13_deployment_image_err.yml
---
# Source: application-deploy/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: demo
spec:
  # modify replicas according to your case
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.3
          ports:
            - containerPort: 80

# kubectl get pods -o wide -w
# kubectl get deployment
# curl http://demo.DNS
