16_deployment.yml
---
# Source: application-deploy/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: demo
spec:
  # modify replicas according to your case
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80

# kubectl get pods -o wide -w
# kubectl get replicaset
# kubetail -l app=nginx
# curl http://demo.DNS
# ETCDCTL_API=3 etcdctl --endpoints=https://127.0.0.1:2379 --cert /etc/ssl/etcd/ssl/KEY.pem --key /etc/ssl/etcd/ssl/KEY.pem get --prefix /registry/deployments/demo/nginx
