17_deployment_volumes.yml
---
# Source: application-deploy/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: demo
spec:
  # modify replicas according to your case
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
          volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: page
            readOnly: true
      volumes:
      - configMap:
          items:
          - key: index.html
            path: index.html
          name: demo-configmap
        name: page

# kubectl get pods -o wide -w
# kubectl get replicaset
# kubetail -l app=nginx
# curl http://demo.DNS
