5_pod.yml
kind: Pod
apiVersion: v1
metadata:
  name: nginx
  namespace: demo
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80

# kubectl get pod -o wide -w
