7_service_clusterIP.yml
---
# Source: application-deploy/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip
  namespace: demo
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx

# kubectl get svc -o wide
